# Tilde

./: .gitignore  CMakeLists.txt  MainWindow.hpp  README.md  Tilde.kdev4  main.cpp  tilde.desktop
.github/workflows/: release.yml
examples/: benchmark.tex
packaging/fedora/: tilde.spec
src/: aboutdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.hpp  version.hpp.in
